GG-24325 Mute warning on Java 9+.